hsreplaynet/static/styles/my_replays.scss
.my-replays-content {
	display: flex;

	.pagination {
		margin: 0;
	}
}

.replay-list {
	width: calc(100% - 300px);
	padding: 10px;

	@media(max-width: 992px) {
		width: 100%;
	}
}

.game-history-item {
	&>a {
		border: 2px solid #bbbbbb;
		background-color: rgb(247, 247, 247);
		color: inherit;
		display: block;
		line-height: 1.42857143;
		margin-bottom: 20px;
		padding: 4px;

		&.won {
			border-color: #8ce62c;
			background-color: rgb(240, 245, 233);
		}

		&.lost {
			border-color: #e64032;
			background-color: rgb(245, 236, 233);
		}
	}
}


.hsreplay-thumbnail {
}

a.hsreplay-thumbnail:link, a.hsreplay-thumbnail:hover {
	color: inherit;
}

/* Top section (.hsreplay-involved) */

.hsreplay-involved {
	margin: 0;
	position: relative;
	width: 100%;
	white-space: nowrap;
}

.hsreplay-involved figure {
	display: inline-block;
	width: calc(50% - 1px);
	position: relative;
	clip-path: rect(2%, 10%, 2%, 10%);
	margin-right: 2px;
	font-size: 4vw;
	overflow: hidden;
}

.hsreplay-involved figure img {
	width: 100%;
	background-color: black;
}

.hsreplay-involved figcaption {
	background-color: rgba(0, 0, 0, 0.65);
	color: white;
	display: flex;
	font-weight: bold;
	margin-top: -25%;
	position: absolute;
	width: 100%;
	bottom: 0;
	align-items: center;
	justify-content: center;
	text-align: center;
	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000,
		-1px 1px 0 #000, 1px 1px 0 #000;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: normal;
	line-height: 1.3em;
	padding: 0.25em 0;
}

.hsreplay-involved:hover figcaption {
	opacity: 0.5;
}

@media (min-width: 768px) {
	.hsreplay-involved figure {
		font-size: 2vw;
	}
}

@media (min-width: 992px) {
	.hsreplay-involved figure {
		font-size: 1.5vw;
	}
}

@media (min-width: 1200px) {
	.hsreplay-involved figure {
		font-size: 1vw;
	}
}

.hsreplay-involved figure.winner:first-of-type:before {
	left: 0;
}

.hsreplay-involved figure.winner:last-of-type:before {
	right: 0;
}

.hsreplay-invalid .hsreplay-involved figure img {
	opacity: 0.6;
}

.hsreplay-versus {
	position: absolute;
	width: 12%;
	top: 44%;
	margin-left: 44%;
	z-index: 1;
}

.hsreplay-involved figure.loser img {
	filter: grayscale(100%);
	-webkit-filter: grayscale(100%);
	-moz-filter: grayscale(100%);
}

/* Bottom section (.hsreplay-details/.hsreplay-message) */

.hsreplay-details dl {
	margin: 4px 0;
	width: 50%;
	display: inline-block;
}

.hsreplay-details dt {
	color: #959595;
	font-size: 0.8em;
	font-style: italic;
	font-weight: normal;
	margin-top: 4px;
}

.hsreplay-details dd {
	font-size: 1.2em;
	font-weight: bold;
	margin-left: 4px;
}

.hsreplay-details > div {
	margin: 10px 0 0 0;
	width: 50%;
	display: inline-block;
	vertical-align: top;
	text-align: center;
	font-size: 1.2em;
	font-weight: bold;
}

.hsreplay-type {
	width: 50%;
}

.hsreplay-type-sm {
	height: 2em;
}

#replay-filter {
	margin: 0 0 10px 0;

	input {
		float: right;
	}
}

.list-message {
	text-align: center;
	font-size: 1.5em;
	margin: 2em 0;

	h2 {
		font-weight: bold;
		font-size: 1.5em;
	}
}

#replay-search {
	margin-bottom: 6px;
}

#replay-search > div {
	margin-bottom: 4px;
}


.match-table {
	display: table;
	width: 100%;
	line-height: 2em;
	white-space: nowrap;
	padding: 1px;
	background: $blue;
	margin-bottom: 20px;

	a {
		text-decoration: none;
		color: black;
	}

	.match-table-header {
		background-color: $blue;
		color: white;
		text-transform: uppercase;
		font-weight: bold;
		margin: 0;
		padding: 0.5em 0.5em;
		display: table-header-group;
		line-height: 1.75em;
	}

	.match-table-body {
		display: table-row-group;

		.match-table-row {
			background-color: #f7f7f7;

			.match-table-cell {
				border-color: darkgray;
			}

			&.result-won {
				background-color: rgb(240, 245, 233);

				.match-table-cell {
					border-color: #8ce62c;
				}
			}

			&.result-lost {
				background-color: rgb(245, 236, 233);

				.match-table-cell {
					border-color: #f77a70;
				}
			}

			&:hover {
				background-color: lightgray;

				&.result-won {
					background-color: rgb(210, 245, 203);
				}

				&.result-lost {
					background-color: rgb(245, 206, 203);
				}
			}

			&:last-child {
				.match-table-cell {
					border-bottom: none;
				}
			}
		}
	}

	.match-table-row {
		display: table-row;

		.match-table-cell {
			display: table-cell;
			padding: 3px 10px;
			vertical-align: middle;
			border-bottom-width: 1px;
			border-bottom-style: solid;

			&.player-icon {
				padding-right: 0;
			}

			&.player-name {
				padding-right: 0;
				padding-left: 5px;
			}

			&.opponent-icon {
				padding-left: 0;
				padding-right: 0;
			}

			&.opponent-name {
				padding-left: 5px;
			}

			&.auto-size {
				width: 1%;
			}

			&.result-won {
				color: green;
			}

			&.result-lost {
				color: red;
			}

			&.match-header {
				vertical-align: initial;

				>span {
					position: absolute;
				}
			}

			.match-table-game-type {
				display: flex;
			}

			.class-icon {
				height: 2em;
			}

			.match-table-result-won {
				color: green;
			}

			.match-table-result-lost {
				color: red;
			}

			@media screen and (max-width: 1600px) {
				&.hide-below-1600 {
					display: none !important;
				}
			}

			@media screen and (max-width: 1100px) {
				&.hide-below-1100 {
					display: none !important;
				}
			}

			@media screen and (max-width: 768px) {
				&.hide-below-768 {
					display: none !important;
				}
			}

			@media screen and (max-width: 500px) {
				&.hide-below-500 {
					display: none !important;
				}
			}
		}
	}
}

#myreplays-infobox {
	.chart-wrapper {
		margin-left: calc(50% - 150px);
		max-width: 300px;
	}
}
.header-buttons {
	margin-bottom: 10px;
}

/* Styling for empty section */

.replay-listing.no-replays {
	margin: 8em auto 4em;
	text-align: center;

	#claim-account {
		margin: 5em;

		.claim-account-screenshot {
			display: block;
			margin: 1em auto;
			width: 275px;

			img {
				width: 275px;
			}
		}
	}
}

